--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -43,6 +43,7 @@
       <ul>
         <li><a href="/menu/pre-exam/qcm_tf">VRAI/FAUX</a></li>
       </ul>
+      <span></span>
       <ul><a href="/">Chat</a></ul>
     </li>
   </ul>
