--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <header>
-    <button class="menu-button" onclick="toggleSidebar()">☰ Menu</button>
+    <button class="menu-button" onclick="toggleSidebar()">☰</button>
     {{ qtype.upper() }} - {{ source.lower() }}
   </header>
 
@@ -159,7 +159,7 @@
       else if ("{{ qtype }}" === "open") {
         box.innerHTML = `<div class='message bot'>${questionText}</div>`;
         const input = document.createElement("input");
-        input.id = "openInput";
+        input.id = "userInput";
         input.type = "text";
         input.placeholder = "Type your answer and press Enter...";
         input.onkeydown = (e) => { if (e.key === "Enter") checkAnswer(input.value); };
@@ -251,5 +251,30 @@
 
     loadQuestion();
   </script>
+  <div id="google_translate_element" style="display:none;"></div>
+
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+
+    function changeLanguage(lang) {
+      let select = document.querySelector(".goog-te-combo");
+      if (select) {
+        select.value = lang;
+        select.dispatchEvent(new Event("change"));
+      } else {
+        alert("Google Translate is not yet ready. Wait a few seconds and then try again.");
+      }
+    }
+
+    document.querySelectorAll(".translateButton").forEach(button => {
+      button.addEventListener("click", function() {
+        changeLanguage(this.getAttribute("data-lang"));
+      });
+    });
+  </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </body>
 </html>
