--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -20,12 +20,27 @@
     .choices > .message.bot {
       margin-top: 0;
     }
+    #google_translate_element {
+      float: right;
+      margin: 10px;
+    }
   </style>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'en,fr,de',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+    }
+  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </head>
 <body>
   <header>
     <button class="menu-button" onclick="toggleSidebar()">☰</button>
     {{ qtype.upper() }} - {{ source.lower() }}
+    <div id="google_translate_element" class="notranslate"></div>
   </header>
 
 <div id="sidebar">
