--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -65,28 +65,27 @@
         select.value = lang;
         select.dispatchEvent(new Event("change"));
       } else {
-        alert("Google Translate is not ready. Wait a few seconds and try again.");
+        alert("Google Translate is not yet ready. Please wait and try again.");
+      }
+    }
+
+    function waitForTranslateDropdown(callback, retries = 20) {
+      const select = document.querySelector(".goog-te-combo");
+      if (select) return callback();
+      if (retries > 0) {
+        setTimeout(() => waitForTranslateDropdown(callback, retries - 1), 300);
+      } else {
+        alert("Google Translate is not ready. Please wait a moment and try again.");
       }
     }
 
     document.addEventListener("DOMContentLoaded", () => {
-      function waitForTranslateDropdown(callback, retries = 10) {
-  const select = document.querySelector(".goog-te-combo");
-  if (select) return callback();
-  if (retries > 0) {
-    setTimeout(() => waitForTranslateDropdown(callback, retries - 1), 500);
-  } else {
-    alert("Google Translate is not ready. Please wait a moment and try again.");
-  }
-}
-
-document.querySelectorAll(".translateButton").forEach(button => {
-  button.addEventListener("click", function () {
-    const lang = this.getAttribute("data-lang");
-    waitForTranslateDropdown(() => changeLanguage(lang));
-  });
-});
-
+      document.querySelectorAll(".translateButton").forEach(button => {
+        button.addEventListener("click", function () {
+          const lang = this.getAttribute("data-lang");
+          waitForTranslateDropdown(() => changeLanguage(lang));
+        });
+      });
     });
   </script>
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
@@ -129,7 +128,8 @@ document.querySelectorAll(".translateButton").forEach(button => {
   <div class="chatbox" id="chatbox"></div>
   <div class="choices" id="interaction"></div>
 
-  <div id="google_translate_element" style="display:none;"></div>
+  <!-- Invisible but functional Google Translate target -->
+  <div id="google_translate_element" class="notranslate" style="position:absolute; top:-1000px;"></div>
 
   <script>
     let questions = {{ questions | tojson }};
