--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -133,6 +133,7 @@
 
   <script>
     let questions = {{ questions | tojson }};
+    shuffle(questions);
     let index = 0;
     let current = questions[index];
 
