--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -84,12 +84,20 @@ function shuffle(array) {
   <div id="sidebar">
     <button class="close-button" onclick="toggleSidebar()">✖</button>
     <ul>
-      <li><a href="/menu/epac/qcm">EPAC - QCM</a></li>
-      <li><a href="/menu/epac/open">EPAC - OPEN</a></li>
-      <li><a href="/menu/epac/qcm_tf">EPAC - TRUE/FALSE</a></li>
-      <li><a href="/menu/pre-exam/qcm">Pre-Exam - QCM</a></li>
-      <li><a href="/menu/pre-exam/open">Pre-Exam - OPEN</a></li>
-      <li><a href="/menu/pre-exam/qcm_tf">Pre-Exam - TRUE/FALSE</a></li>
+      <li>
+        <span>EPAC</span>
+        <ul>
+          <li><a href="/menu/epac/qcm">QCM</a></li>
+          <li><a href="/menu/epac/open">OPEN</a></li>
+        </ul>
+      </li>
+      <li>
+        <span>Pre-Exam</span>
+        <ul>
+          <li><a href="/menu/pre-exam/qcm_tf">VRAI/FAUX</a></li>
+        </ul>
+        <ul><li><a href="/">Chat</a></li></ul>
+      </li>
     </ul>
   </div>
 
