--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -84,20 +84,12 @@ function shuffle(array) {
   <div id="sidebar">
     <button class="close-button" onclick="toggleSidebar()">✖</button>
     <ul>
-      <li>
-        <span>EPAC</span>
-        <ul>
-          <li><a href="/menu/epac/qcm">QCM</a></li>
-          <li><a href="/menu/epac/open">OPEN</a></li>
-        </ul>
-      </li>
-      <li>
-        <span>Pre-Exam</span>
-        <ul>
-          <li><a href="/menu/pre-exam/qcm_tf">VRAI/FAUX</a></li>
-        </ul>
-        <ul><li><a href="/">Chat</a></li></ul>
-      </li>
+      <li><a href="/menu/epac/qcm">EPAC - QCM</a></li>
+      <li><a href="/menu/epac/open">EPAC - OPEN</a></li>
+      <li><a href="/menu/epac/qcm_tf">EPAC - TRUE/FALSE</a></li>
+      <li><a href="/menu/pre-exam/qcm">Pre-Exam - QCM</a></li>
+      <li><a href="/menu/pre-exam/open">Pre-Exam - OPEN</a></li>
+      <li><a href="/menu/pre-exam/qcm_tf">Pre-Exam - TRUE/FALSE</a></li>
     </ul>
   </div>
 
@@ -137,7 +129,10 @@ shuffle(questions);
         data.choices.forEach(c => {
           const b = document.createElement("button");
           b.textContent = c;
-          b.onclick = () => checkAnswer(c.charAt(0).toUpperCase());
+          b.onclick = () => {
+  area.querySelectorAll("button").forEach(btn => btn.disabled = true);
+  checkAnswer(c.charAt(0).toUpperCase());
+};
           area.appendChild(b);
         });
       }
