--- a/src/templates/questions.html
+++ b/src/templates/questions.html
@@ -84,7 +84,7 @@ function shuffle(array) {
 <div id="sidebar">
   <button class="close-button" onclick="toggleSidebar()">✖</button>
   <ul>
-    <li><a href="/">chat</a></li>
+    <li><a href="/">Chat</a></li>
     <span></span>
     <li>
       <span>EPAC</span>
